--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "course": "CSE40-TODO",
+    "course": "cse40-f25-hao",
     "assignment": "HO4",
     "server": "http://lighthouse.soe.ucsc.edu",
-    "user": "sslug@ucsc.edu",
-    "pass": "1234567890"
+    "user": "iarches@ucsc.edu",
+    "pass": "60b354a37acfa0b795e170029021981b"
 }
